Add torch lightning

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ manual_test/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
+*/__pycache__
 *.py[cod]
 *$py.class
 
@@ -178,6 +179,5 @@ cython_debug/
 
 conda_env/
 data/
-models/
 /data
 /models
