--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-torch >= 2.1.0
+absl-py==2.0.0
 aiohttp==3.9.1
 aiohttp-retry==2.8.3
 aiosignal==1.3.1
@@ -51,8 +51,10 @@ google-api-core==2.15.0
 google-api-python-client==2.111.0
 google-auth==2.26.1
 google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.0
 googleapis-common-protos==1.62.0
 grandalf==0.8
+grpcio==1.60.0
 gto==1.6.1
 httplib2==0.22.0
 hydra-core==1.3.2
@@ -61,10 +63,12 @@ iterative-telemetry==0.0.8
 Jinja2==3.1.2
 kiwisolver==1.4.5
 kombu==5.3.4
+Markdown==3.5.1
 markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 matplotlib==3.8.2
 mdurl==0.1.2
+mlops_classifier @ file:///mnt/Data/KYR/MLOps/mnist_project
 mpmath==1.3.0
 multidict==6.0.4
 networkx==3.2.1
@@ -82,14 +86,16 @@ nvidia-nccl-cu12==2.18.1
 nvidia-nvjitlink-cu12==12.3.101
 nvidia-nvtx-cu12==12.1.105
 oauth2client==4.1.3
+oauthlib==3.2.2
 omegaconf==2.3.0
 orjson==3.9.10
 packaging==23.2
+pandas==2.1.4
 pathspec==0.12.1
 pillow==10.2.0
 platformdirs==3.11.0
 prompt-toolkit==3.0.43
-protobuf==4.25.1
+protobuf==4.23.4
 psutil==5.9.7
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
@@ -104,8 +110,10 @@ pygtrie==2.5.0
 pyOpenSSL==23.3.0
 pyparsing==3.1.1
 python-dateutil==2.8.2
+pytz==2023.3.post1
 PyYAML==6.0.1
 requests==2.31.0
+requests-oauthlib==1.3.1
 rich==13.7.0
 rsa==4.9
 ruamel.yaml==0.18.5
@@ -116,11 +124,18 @@ shortuuid==1.0.11
 shtab==1.6.5
 six==1.16.0
 smmap==5.0.1
+snakeviz==2.2.0
 sqltrie==0.11.0
+src @ file:///mnt/Data/KYR/MLOps/mnist_project
 sympy==1.12
 tabulate==0.9.0
+tensorboard==2.15.1
+tensorboard-data-server==0.7.2
 tomlkit==0.12.3
 torch==2.1.2
+torch-tb-profiler==0.4.3
+torchvision==0.16.2
+tornado==6.4
 tqdm==4.66.1
 triton==2.1.0
 typer==0.9.0
@@ -131,5 +146,6 @@ urllib3==2.1.0
 vine==5.1.0
 voluptuous==0.14.1
 wcwidth==0.2.12
+Werkzeug==3.0.1
 yarl==1.9.4
 zc.lockfile==3.0.post1
