--- a/.github/workflows/tests_cache.yml
+++ b/.github/workflows/tests_cache.yml
@@ -1,4 +1,4 @@
-name: "Run tests"
+name: "Run tests with cache"
 
 on:
   push:
@@ -18,11 +18,25 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.11
+
+    - name: Get pip cache dir
+      id: pip-cache
+      run: |
+        echo "::set-output name=dir::$(pip cache dir)"
+
+    - name: Cache dependencies
+      uses: actions/cache@v3
+      with:
+        path: ${{ steps.pip-cache.outputs.dir }}
+        key: chache_test${{ hashFiles('**/requirements.txt') }}
+        restore-keys: |
+          chache_test
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install -r requirements_tests.txt
+
     - name: Test with pytest
       run: |
         pip install pytest
